[package]
name = "r006_breakout"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.13.0"
bevy_math = "0.14.2"
rand = "0.8.5"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "DomRect",
] }
